files/css/custom.css
html, body {
    height: 100%;
}

body {
    /*padding-top: 60px;*/
    background: url("../img/bg.png") repeat-x scroll 0 -160px transparent;
}

.main-container {
    padding-top: 60px;
}

h1, h2, h3, h4, h5, h6 {
    word-wrap: break-word;
}

iframe {
    border: 0;
}

footer {
    padding-top: 10px;
    padding-bottom: 10px;
    border-top: 1px solid #DDD;
    margin-top: 30px;
}

.white-text {
    color: #ccc;
}

.brand:hover {
    text-decoration: none;
}

.brand img {
    margin-top: -4px;
    margin-right: 4px;
    overflow: hidden;
}

.activity_image {
    height: 140px;
    margin-bottom: 20px;
    overflow: hidden;

    -webkit-box-shadow: rgba(0, 0, 0, 0.0742188) 0px 1px 1px 0px;
    background-color: transparent;
    border-bottom-color: #DDD;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    border-left-color: #DDD;
    border-left-style: solid;
    border-left-width: 1px;
    border-right-color: #DDD;
    border-right-style: solid;
    border-right-width: 1px;
    border-top-color: #DDD;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    border-top-style: solid;
    border-top-width: 1px;
    box-shadow: rgba(0, 0, 0, 0.0742188) 0px 1px 1px 0px;
    color: #0069D6;
    padding: 4px;
}

.container-fluid {
    min-width: 0px;
}

.breadcrumb {
    margin-bottom: 0;
}

div.table-tabs {
    margin-bottom: 0px;
}


div#btn-profile {
    min-width: 220px;                       /* equal to .span2 */
} div#btn-profile a:not(.dropdown-toggle) { /* child element, but not the dropdown-widget */
    text-align: left;
    min-width: 173px;                       /* equal to .span2 - the dropdown widget (26px) - derp adjustments*/
}

.register-button{
    text-align: center;
}

.login-buttons {
    margin-left: 5%;
}

.form-error {
    color: red;
}

.paid
{
    cursor:pointer;
}

.arrived
{
    cursor:pointer;
}

.attendee-counts span
{
    margin-right: 20px;
    font-weight: bold;
}

.navbar-logo {
    width: 32px;
    height: 32px;
    margin: 9px;
    background-image: url("/static/logo/logo_32.png");
    background-size: contain;
    image-rendering: crisp-edges;
}

.navbar .nav > li > a {
    color:  #000000;
}

.sponsor_banner {
    max-width: 100%;
    max-height: 150px;
}

.tab-pane pre {
    border: none;
    padding: 0;
}

.form-actions {
    margin-top: 10px;
}

.click-table tbody tr:hover {
    cursor: pointer;
}

.click-table tbody tr:hover .underline {
    text-decoration: underline;
}

.participants-heading{
    color: rgb(65, 131, 196) !important;
    font-weight: bold !important;
}

.participant-you{
    font-weight: bold;
}

.collapsed-button{
    height: 50px;
    width: 40px;
    margin-top: 0;
    margin-bottom: 0; 
    border: none;
}

.language-dropdown{
    margin-right: 10px;
}

.sidebar-wrapper {
    margin-top: 80px;
    right: 100px;
    position: fixed;
    width: 220px;  
}

@media (max-width:1199px) {
    .sidebar-wrapper{
        position: relative;
        width: 100%;
        max-height: 30%;
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;
        max-width: 100%;
    }
}

.sidebar {
    padding: 0;
}

.sidebar .nav {
    text-align: center;
    margin: 0px -1px;
    padding: 0px;
    padding-bottom: 15px;
}

.sidebar .nav li {
    overflow-x: hidden;
}

.sidebar .nav li:not(.active) {
    padding: 4px 0px;
    margin-left: 1px;
    margin-right: 1px;
}

.sidebar-header {
    background-color: rgb(65, 131, 196);
    padding: 0;
}

.sidebar-header a {
    color: white;
    padding: 0 !important;
}

.sidebar-header a:hover {
    background: none !important;
}

.sidebar li:not(.sidebar-header) a {
    margin: 0;
    padding: 1px;
}

@media (min-width:992px) {
    .sponsorbar-wrapper {
        position: absolute;
        top: 100px;
        right: 1vw;
        width: 25vw;
        max-width: 300px;
    }
}

@media (min-width:1400px) {
    .sponsorbar-wrapper {
        right: 5vw;
    }
}

.sponsorbar {
    margin-top: 20px;
    margin-bottom: 0;
}

.sponsorbar-header, .sponsorbar-header > a {
    background-color: rgb(65, 131, 196) !important;
    color: white !important;
    text-align: center;
}

.sponsorbar-body > hr:first-child {
    display: none;
}

.sponsorbar-body > hr {
    margin: 10px;
}

.sponsorbar-sponsor {
    height: 80px;
    /* For vertically centering */
    line-height: 80px;
    padding-bottom: 10px;
    text-align: center;
}

.sponsorbar-sponsor-title {
    font-weight: bold;
}

.sponsorbar-sponsor-image {
    max-height: 100%;
    max-width: 100%;
}

.svg-container {
      position: relative;
}

.svg-container svg {
    width: 100%;
}

.stretcher-bar {
  width: 100%;
  height: 75vh;
  max-width: 100%;
  max-height: 100%;
}

@media (max-width:767px) {
    .navbar-nav.navbar-collapse {
        margin-left: 0;
        margin-right: 0;
        padding-left: 0;
        padding-right: 0;
    }

    .language-dropdown {
        display: block;
    }

    .center-on-collapse{
        text-align: center;
        margin-bottom: 5px; 
    }

    .form-actions-collapsed {
        margin-top: 10px;
    }
}

@media (max-width:575px) {
    h1 {
        font-size: 2em;
    }
    h2 {
        font-size: 1.8em;
    }
    h3 {
        font-size: 1.6em;
    }
    h4 {
        font-size: 1.4em;
    }
    h5 {
        font-size: 1.2em;
    }
    h6 {
        font-size: 1.0em;
    }
}

@media (max-width:350px) {
    .nav-team{
        float: left !important;
        width: 50% !important;
    }
}

.seating-node-free {
    fill:#5CB85C;
}

.seating-node-occupied {
    fill:#C9302C;
}

.seating-node-self {
    fill:#EC971F;
}

.seating-node-info {
    stroke:black;
    stroke-width:2;
}

.seating-node-search {
    fill:pink;
    stroke-width:2;
}

.hide {
    display: none;
}

#brackets-button {
    margin-bottom: 10px;
}

.seat-wrapper {
    margin-top: 0;
}

.competition-start-time {
    margin-bottom: 0;
    color: grey;
}

.lan-video {
    margin-bottom: 20px;
}

.lan-map {
    width: 100%;
    height: 350px;
}

/* Override */
.page-header {
    margin-top: 20px;
}

.alert {
    margin-top: 10px;
    margin-bottom: 10px;
}

.schedule-calendar {
    width: 100%;
    height: 70vh;
    min-height: 300px;
    margin-top: 10px;
}

.article-tags {
    margin-top: 10px;
    margin-bottom: 10px;
}

.article-content {
    line-height: 1.5em;
    text-align: justify;
}

.lan-desctiption {
    line-height: 1.5em;
    text-align: justify;
}

.inline-button-form {
    display: inline-block;
    margin-right: 20px;
    margin-bottom: 10px;
}

.stream {
    margin-top: 20px;
    margin-bottom: 20px;
}

.stream-desc {
    margin-top: 10px;
}

.long-text-button {
    white-space: normal;
    word-wrap: break-word;
}

.label, .label a {
    color: #FFF;
}

